<resources>
    <string name="app_name">Lab2AppRun</string>
    <string name="label_register">Register</string>
    <string name="label_add_race">Add Race</string>
    <string name="label_login">Login</string>
    <string name="label_button_add_race">Add Race</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_add_race">Add Race</string>

    <string name="hint_user">username</string>
    <string name="hint_pass">password</string>
    <string name="hint_confPass">Confirm Pass</string>
    <string name="hint_email">Email</string>
    <string name="hint_race_name">Race Name</string>
    <string name="hint_description">Description</string>
    <string name="hint_distance">Race Distance</string>
    <string name="hint_place">Race Place</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_race_date">Race\'s Date</string>

    <string name="label_distance">Distance:</string>
    <string name="label_place">Place:</string>
    <string name="label_date">Date:</string>
    <string name="label_phone">Phone Number:</string>
    <string name="label_email">Email:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_image">Add Image</string>
</resources>
