<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udea.compumovil.gr1.lab2apprun.activities.AddRaceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_race_name"
            android:inputType="textPersonName"
            android:capitalize="sentences"/>

        <EditText
            android:id="@+id/et_description"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_description"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_distance"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_distance"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/et_place"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_place"
            android:inputType="textPersonName" />

        <DatePicker
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:calendarViewShown="false"
            android:datePickerMode="spinner">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_race_date" />
        </DatePicker>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_phone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />

        <ImageView
            android:id="@+id/iv_choose_race"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:contentDescription="@string/add_image"
            android:onClick="addImage"
            android:src="@android:drawable/ic_menu_report_image" />

        <Button
            android:id="@+id/buttonRegistrarse"
            android:layout_width="163dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="addRace"
            android:text="@string/label_button_add_race" />
    </LinearLayout>
</ScrollView>
