<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.RegisterActivity">

    <EditText
        android:id="@+id/edit_register_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_user" />

    <EditText
        android:id="@+id/edit_register_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_register_user"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:hint="@string/hint_pass" />

    <EditText
        android:id="@+id/edit_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_register_pass"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:hint="@string/hint_email" />

    <Button
        android:id="@+id/buttonRegistrarse"
        android:layout_width="163dp"
        android:layout_height="50dp"
        android:layout_below="@id/edit_register_email"
        android:layout_centerHorizontal="true"
        android:onClick="register"
        android:text="Registrarse" />

    <RelativeLayout
        android:id="@+id/layout_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonRegistrarse"
        android:paddingTop="10dp"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tv_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Agrega una imagen de perfil (Opcional)" />

        <ImageView
            android:id="@+id/image_view_choose"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/tv_image"
            android:onClick="loadImage"
            android:src="@android:drawable/ic_menu_report_image" />

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/image_view_choose"
            android:layout_below="@id/image_view_choose"
            android:text="Omitir agregar imagen" />

    </RelativeLayout>
</RelativeLayout>
